<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/cv_item"
    android:layout_marginBottom="@dimen/dp_sm"
    android:layout_marginTop="@dimen/dp_sm"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="90dp"
            android:layout_marginTop="@dimen/dp_m"
            android:layout_marginBottom="@dimen/dp_m"
            android:layout_marginStart="@dimen/dp_m"
            android:layout_marginEnd="@dimen/dp_sm"
            android:layout_height="130dp"
            android:background="@color/fontLight"
            android:contentDescription="@string/poster_desc"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_poster"
            android:layout_marginTop="@dimen/dp_xl"
            android:paddingLeft="@dimen/dp_m"
            android:paddingRight="@dimen/dp_m"
            android:textStyle="bold"
            android:textSize="@dimen/font_xl"
            android:text="@string/dumy_title"/>

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_poster"
            android:layout_below="@id/tv_title"
            android:paddingLeft="@dimen/dp_m"
            android:paddingRight="@dimen/dp_m"
            android:textStyle="italic"
            android:textSize="@dimen/font_m"
            android:text="@string/dumy_release"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_poster"
            android:layout_below="@id/tv_release"
            android:paddingTop="@dimen/dp_sm"
            android:paddingStart="@dimen/dp_m"
            android:paddingEnd="@dimen/dp_xl"
            android:layout_marginEnd="@dimen/dp_l"
            android:textSize="@dimen/font_l"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/dumy_overview"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>